--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,9 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 
     <!-- Icons -->
-	<link rel="shortcut icon" type="image/png" href="/ponder.png"/>
+	<link rel="shortcut icon" type="image/png" href="/ponder.png">
 	<link rel="icon" type="image/png" sizes="512x512" href="ponder.png">
+	<link rel="apple-touch-icon" href="ponder.png">
 
 </head>
 
