Add counter to the home page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
     <p>When you buy Ponder, you get a perpetual license for the current version and a download that you can run from your own computer. You also support the author so that I can create Ponder improvements and other great software.</p>
 
+    <script src="https://counter.joeldare.com/counter.js" async></script>
+
 </body>
 
 </html>
