--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <p class="center">Impromptu Writing Made Easy</p>  
 
-    <div class="center" style="margin-top: 50px; margin-bottom: 50px;">
-        <a href="https://ponder.joeldare.com/app" class="button light" target="_blank">Try Free</a>
-        <a href="https://gum.co/ponder" class="button main">Buy Now</a>
+    <div class="center" style="margin-top: 40px; margin-bottom: 50px;">
+        <a href="https://ponder.joeldare.com/app" class="button fixed light" target="_blank">View on Github</a>
+        <a href="https://gum.co/ponder" class="button fixed main">Open</a>
     </div>
     
     <img src="ponder.png">
