Fix button links on home page

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <p class="center">Impromptu Writing Made Easy</p>  
 
     <div class="center" style="margin-top: 40px; margin-bottom: 50px;">
-        <a href="https://ponder.joeldare.com/app" class="button fixed light" target="_blank">View on Github</a>
-        <a href="https://gum.co/ponder" class="button fixed main">Open</a>
+        <a href="https://github.com/codazoda/ponder" class="button fixed light" target="_blank">View on Github</a>
+        <a href="https://ponder.joeldare.com/app" class="button fixed main">Open</a>
     </div>
     
     <img src="ponder.png">
