Updated the "sales" text on the home page

--- a/index.html
+++ b/index.html
@@ -21,21 +21,10 @@
         <a href="https://github.com/codazoda/ponder" class="button fixed light" target="_blank">View on Github</a>
         <a href="https://ponder.joeldare.com/app" class="button fixed main">Open</a>
     </div>
-    
+
     <img src="ponder.png">
 
-
-    <h2>Your Scratch Pad</h2>
-    
-    <p>Jot down quick drafts whenever inspiration strikes. The first few words are always the hardest to write. Ponder is a ten file scratch pad that works in your web browser. It's designed to mimic the simplicity and distraction free writing experience of electronic word processors from the past.</p>
-
-    <h2>Private and Offline</h2>
-
-    <p>Ponder is private. Although it runs in your browser it was designed to work completely offline. Documents are stored in your local browser storage and are not transmitted to a central server.</p>
-
-    <h2>You Own It</h2>
-
-    <p>When you buy Ponder, you get a perpetual license for the current version and a download that you can run from your own computer. You also support the author so that I can create Ponder improvements and other great software.</p>
+    <p>Say hello to Ponder, the tool that makes it easy to focus on what matters most: your thoughts and ideas. Our web app runs completely offline and is private, never transmitting your notes over the internet. And with a clean, distraction-free interface, Ponder can help you stay organized and productive.</p>
 
     <script src="https://counter.joeldare.com/counter.js" async></script>
 
